Second last commit

--- a/src/Components/SideNavbar/SideNavbar.css
+++ b/src/Components/SideNavbar/SideNavbar.css
@@ -1,21 +1,104 @@
-.iconbtn{
- color: #f5f5f5;
- background-color: #1F305E;
- padding-left: 1.3rem;
- padding-top: 0.3rem;
- font-size: 1rem;
- font-weight: bolder;
+.closed {
+  width: 4rem;
+  transition: width 200ms cubic-bezier(0.4, 0, 0.6, 1) 0ms;
+  display: flex;
+  justify-content: flex-start;
+  z-index: 1;
 }
-.iconbtn:hover{
-  background-color:#120A8F;
+.open {
+  width: 12rem;
+ 
+}
+/* .sideNavbar {
+  transition: margin-left 0.3s ease-out;
+  margin-left: 0;
+}
+
+.sideNavbar.open {
+  margin-left: 300px;  Adjust the margin as needed to match the drawer width 
+}
+ */
+
+.drawer {
+  height: 93.4vh;
+  background-color: #1f305e;
+  color: #f5f5f5;
+  overflow: hidden;
+  margin-top: 4rem;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.iconbtn {
+  display: flex;
+  align-items: center;
+  margin-left: 1rem;
+  height: 2.5rem;
   cursor: pointer;
+  
 }
-.searchfield{
-  height: 1.5rem;
+
+.searchbar {
+  background-color: #1f305e;
+  padding-left: 0.5rem;
+  
+}
+
+.searchfield {
   width: 80%;
+  padding: 0.5rem;
+  border: none;
   border-radius: 4px;
   outline: none;
-  border: none;
-  margin-left: 1rem;
-  padding-left: 0.5rem;
+
+  
+}
+
+.listContainer {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.listItem {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
+  cursor: pointer;
+  transition: background-color 200ms ease-in-out;
+  white-space: nowrap; 
+  overflow: hidden; 
+  text-overflow: ellipsis;
+  margin-top: 1rem;
+}
+
+.listItem:hover {
+  background-color: #b9d9eb;
+ 
+}
+
+.active {
+  background-color: #87ceeb;
+ 
+}
+
+.listItemIcon {
+  display: flex;
+  align-items: center;
+  color:#f5f5f5;
+}
+
+.listItemText {
+  opacity: 1;
+  transition: opacity 200ms ease-in-out;
+}
+
+.closed .listItemText {
+  opacity: 0;
+}
+@media screen and (max-width:600px){
+  .drawer{
+    margin-top: 3.5rem;
+    height: 94vh;
+  }
 }
